--- a/index.html
+++ b/index.html
@@ -6,193 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;600&family=Roboto&display=swap"
-        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600;900&family=Roboto&display=swap"
+        rel="stylesheet"> -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <title>QilinLab</title>
-    <style>
-        .graybg {
-            background-color: #f1f1f2;
-            display: flex;
-            justify-content: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-        }
-
-        .bluebg {
-            background-color: #0089D2;
-            display: flex;
-            justify-content: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-        }
-
-        .blueText {
-            color: #0089D2;
-        }
-
-        .whiteText {
-            color: #fff;
-
-        }
-
-        .card-title {
-            font-size: 18px;
-            font-weight: 600;
-            color: #FF7200;
-            text-align: center;
-        }
-
-        .card-text {
-            font-size: 18px;
-            text-align: center;
-        }
-
-        .logo {
-            margin-top: 20px;
-            width: 140px;
-        }
-
-        .MainDiv {
-            width: 100%;
-        }
-
-        .mainPart {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .img {
-            margin-top: 40px;
-            height: 250px;
-        }
-
-        .htext {
-            font-family: 'Merriweather Sans', sans-serif;
-            font-family: 'Roboto', sans-serif;
-            font-size: 42px;
-            font-weight: 900;
-            margin-top: 10px;
-            text-transform: capitalize;
-        }
-
-        .textlg {
-            font-size: 20px;
-            font-weight: 500;
-            margin-top: 20px;
-        }
-
-        .textsm {
-            font-size: 16px;
-            font-weight: 500;
-            margin-top: 20px;
-
-        }
-
-        .textsmUl {
-            font-size: 16px;
-            font-weight: 500;
-            color: #fff;
-        }
-
-        .button {
-            margin-top: 10px;
-        }
-
-        .card {
-            background-color: #f1f1f2;
-            border: none;
-            border-radius: 20px;
-            width: 20rem;
-            padding: 20px;
-        }
-
-        .button {
-            background-color: #FF7200;
-            /* Green */
-            border: none;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 18px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .button1 {
-            padding: 10px 24px;
-        }
-
-        .W50 {
-            width: 50%;
-        }
-
-        .card-center {
-            display: flex;
-            justify-content: center;
-        }
-
-        @media only screen and (max-width: 500px) {
-
-            .W50 {
-                width: 100%;
-            }
-
-            .logo {
-                margin-top: 20px;
-                padding-left: 10px;
-            }
-
-            .MainDiv {
-                width: 100%;
-            }
-
-            .card {
-                background-color: #f1f1f2;
-                border: none;
-                border-radius: 20px;
-                width: 16rem;
-                padding: 10px;
-            }
-
-            .mainPart {
-                display: flex;
-                justify-content: space-around;
-                margin-top: 5%;
-                padding-left: 20px;
-            }
-
-            .img {
-                margin-top: 20px;
-                height: 230px;
-            }
-
-            .htext {
-                font-family: 'Merriweather Sans', sans-serif;
-                font-family: 'Roboto', sans-serif;
-                font-size: 36px;
-                font-weight: 900;
-                margin-top: 0px;
-                line-height: 50px;
-            }
-
-            .textlg {
-                font-size: 18px;
-                font-weight: 500;
-            }
-
-            .textsm {
-                font-size: 14px;
-                font-weight: 600;
-            }
-
-        }
-    </style>
+    <link rel="stylesheet" href="./css//style.css">
 </head>
 
 <body>
@@ -269,17 +92,13 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
     <div class="bluebg">
-        <div class="W50">
-            <div class="col-md-8 col-sm-12">
+        <div class="W50 d-flex justify-container-center">
+            <div>
 
                 <p class="htext text-center whiteText">Test The Real Power Of Whistle Now!</p>
-                <p class="textsm text-center whiteText">Set up and run a campaign in minutes</p>
+                <p class="textlg text-center whiteText">Set up and run a campaign in minutes</p>
 
                 <div class="text-center mt-5">
                     <button class="button button1">Try It Out Now</button>
