--- a/index.html
+++ b/index.html
@@ -6,133 +6,115 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600;900&family=Roboto&display=swap"
-        rel="stylesheet"> -->
-
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <title>QilinLab</title>
-    <link rel="stylesheet" href="./css//style.css">
+    <title>Whistle LP</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
-    <div class="main">
-        <div class="graybg">
-            <div class="MainDiv W50">
-                <img class="logo" src="./img/logo.png" alt="">
-                <div class="mainPart ">
+    <div class="MainDiv">
+        <div class="firstPart">
+            <div class="odne">
+                <img class="logo" src="./assets/logo.png">
+                <div class="dFlex">
                     <div>
-                        <p class="htext blueText">Increase your sales with the new SMS marketing technology</p>
-                        <p class="textlg">Use Whistle - the smart SMS marketing technology - to reach new customers,
-                            drive
-                            sales and
-                            increase profits. Designed for businesses of all types and sizes.</p>
-                        <p class="textsm">In-build database of over 35 crore Over 350 crore messages sent till
-                            date High conversion rate</p>
-                        <button class="button button1 ">Get Started</button>
+                        <p class="myOne blueText">Increase Your Sales<br /> With The New SMS<br /> Marketing Technology
+                        </p>
                     </div>
                     <div>
-                        <img class="img" src="./img/ss.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="bluebg">
-            <div class="mainPart W50">
-                <div>
-                    <div>
-                        <p class="htext whiteText">Leverage The Power Of Whistle</p>
-                        <p class="textlg whiteText">SMS marketing can be game changer. Run targeted campaigns
-                            and achieve greater conversions.</p>
-                    </div>
-                    <div>
-                        <ul style="list-style-type:disc;">
-                            <li class="textsmUl">Instant online Registration</li>
-                            <li class="textsmUl">Multi-Category Level Segregation</li>
-                            <li class="textsmUl">Reach Out To The Right Audience</li>
-                            <li class="textsmUl">High Conversion Rate</li>
-                            <li class="textsmUl">Prompt Customer Service</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <button class="button button1">Explore Whistle</button>
+                        <p class="description blackText">Use Whistle to reach now<br />customers and drive sales.<br />
+                            Designed for businesses<br />of all types and sizes.</p>
                     </div>
 
                 </div>
-                <div>
-                    <img class="img" src="./img/ss.png">
+                <div class="listText">
+                    <ul>
+                        <li>In-built database of over<span class="markText"> 35 crore</span></li>
+                        <li>Over<span class="markText"> 350 crore</span> messages sent till date</li>
+                        <li>High<span class="markText"> conversion rate</span></li>
+                    </ul>
+                </div>
+                <div class="buttonOne">
+                    <button class="button button1">Get Started</button>
                 </div>
             </div>
         </div>
-        <div class="graybg">
-            <div class="W50">
-                <p class="htext text-center">Acquire New Customers The Right Way!</p>
+        <div class="secondDiv">
+            <div>
+                <p class="myOne2 whiteText">Run<br /> Interest -Based<br /> Targeted Campaigns</p>
+            </div>
+            <div>
+                <p class="description whiteText">SMS marketing through Whistle<br /> will be a game changer.<br /> Run
+                    targeted
+                    campaigns and<br /> achieve greater conversions.</p>
+            </div>
+            <div class="secDiv">
+                <ul class="secondList">
+                    <li>Instant Online Registration</li>
+                    <li>Multi-Category Level Segregation</li>
+                    <li>Reach Out To The Right Audience</li>
+                    <li>High Conversion Rate</li>
+                    <li>Prompt Customer Service</li>
+                </ul>
+            </div>
+            <div class="buttonTwo">
+                <button class="button button2">Explore Whistle</button>
+            </div>
+        </div>
+        <div class="thirdDiv">
+            <div>
+                <p class="myOne2 blueText text-center">Acquire new<br /> customers the<br /> right way!</p>
+            </div>
+            <div>
                 <div class="card-center">
                     <div>
                         <div class="card shadow-lg">
                             <div class="text-center">
-                                <img class="card-img-top" style="width: 60px; margin-top: 20px;" src="./img/db.png"
+                                <img style="height: 50px; margin-top: 20px;" src="./assets/data.png"
                                     alt="Card image cap">
                             </div>
                             <div class="card-body">
                                 <p class="card-title">In-Build smartphone<br />
-                                    userdatabase</p>
+                                    user database</p>
                                 <p class="card-text">In-build database of over 35 crore Over 350 crore
                                     users who are active on SMS</p>
                             </div>
+
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="buttonThree">
+                <button class="button button2">Create Campaigns</button>
 
-                <div class="text-center mt-5">
-                    <button class="button button1">Create Campaigns</button>
-                </div>
             </div>
         </div>
-    </div>
-    <div class="bluebg">
-        <div class="W50 d-flex justify-container-center">
+        <div class="fourDiv">
             <div>
-
-                <p class="htext text-center whiteText">Test The Real Power Of Whistle Now!</p>
-                <p class="textlg text-center whiteText">Set up and run a campaign in minutes</p>
-
-                <div class="text-center mt-5">
-                    <button class="button button1">Try It Out Now</button>
-                </div>
-
+                <p class="myOne2 whiteText text-center">Test the real<br /> power of<br /> Whistle now!</p>
+                <p class="fourText  whiteText text-center">Set up and run a campaign<br /> in minutes</p>
             </div>
-        </div>
-    </div>
-    <div class="graybg">
-        <div class="MainDiv W50">
-            <div class="mainPart ">
-                <div>
-                    <p class="htext blueText">Here's How it Works!</p>
-                    <p class="textlg">You tell us your requirements and goals and we will help you in achieveing
-                        them. From account registration to campaign strategy,
-                        set up and launch, we've got you covered at every step of the process.
-                    </p>
-                    <p class="textlg blueText">Together,<br />
-                        let's achieve more!</p>
-                    <button class="button button1">Explore Whistle</button>
-                </div>
-                <div>
-                    <img class="img" src="./img/ss.png">
-                </div>
+            <div class="buttonFour">
+                <button class="buttonBlue button2">Try It Out Now</button>
             </div>
+
         </div>
     </div>
 
 
 
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
