--- a/index.html
+++ b/index.html
@@ -101,10 +101,44 @@
                 <p class="fourText  whiteText text-center">Set up and run a campaign<br /> in minutes</p>
             </div>
             <div class="buttonFour">
-                <button class="buttonBlue button2">Try It Out Now</button>
+                <button class="buttonBlue button2 mt-3">Try It Out Now</button>
             </div>
 
         </div>
+        <div class="fiveDiv">
+            <div class="fiveleft">
+
+
+                <div>
+                    <p class="myOne2 blueText">Here’s how<br /> it works!</p>
+                </div>
+                <div>
+                    <p class="lastDec">You tell us your requirements and<br>
+                        goals and we will help you in<br />
+                        achieving them. From account<br />
+                        registration to campaign strategy,<br />
+                        set up and launch, we’ve got you<br />
+                        covered at every step of the process.</p>
+                </div>
+                <div>
+                    <p class="lastMsg">Together,<br /> let’s achieve more!</p>
+                </div>
+                <div class="buttonFour">
+                    <button class="button button2">Explore Whistle</button>
+                </div>
+            </div>
+            <div class="sixDiv">
+                <p class="footerText">WValue Martech Pvt. Ltd.<br /> 1187, 5th main, 21st Cross Rd, Sector 7, HSR
+                    Layout,<br />
+                    Bengaluru, Karnataka 560102<br />
+                    Terms & Conditions | Copyright © 2020
+                </p>
+            </div>
+
+        </div>
+
+
+
     </div>
 
 
