--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p class="fourText  whiteText text-center">Set up and run a campaign<br /> in minutes</p>
             </div>
             <div class="buttonFour">
-                <button class="buttonBlue button2 mt-3">Try It Out Now</button>
+                <button class="buttonBlue button2">Try It Out Now</button>
             </div>
 
         </div>
