--- a/index.html
+++ b/index.html
@@ -40,9 +40,39 @@
                         <li>High<span class="markText"> conversion rate</span></li>
                     </ul>
                 </div>
-                <div class="buttonOne">
+                <!-- <div class="buttonOne">
                     <button class="button button1">Get Started</button>
-                </div>
+                </div> -->
+            </div>
+        </div>
+        <div class="formDiv">
+            <p class="tounch">Let's Get In Touch</p>
+            <div class="formSec">
+                <form action="#">
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-sm" name="name"
+                            placeholder="Enter Your Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-sm" name="mobile"
+                            placeholder="Enter Your Mobile Number">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control form-control-sm" name="email"
+                            placeholder="Enter Your Email-ID">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-sm" name="company"
+                            placeholder="Enter Your Company Name">
+                    </div>
+
+                    <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+                    <div class="text-center">
+
+                        <button type="submit" class="buttonBlue button2 w-50 font-weight-bold">Submit</button>
+                    </div>
+
+                </form>
             </div>
         </div>
         <div class="secondDiv">
@@ -64,7 +94,7 @@
                 </ul>
             </div>
             <div class="buttonTwo">
-                <button class="button button2">Explore Whistle</button>
+                <button class="button button2" data-toggle="modal" data-target="#exampleModal">Explore Whistle</button>
             </div>
         </div>
         <div class="thirdDiv">
@@ -91,7 +121,8 @@
                 </div>
             </div>
             <div class="buttonThree">
-                <button class="button button2">Create Campaigns</button>
+                <button type="button" class="button button2" data-toggle="modal" data-target="#exampleModal">Create
+                    Campaigns</button>
 
             </div>
         </div>
@@ -101,7 +132,8 @@
                 <p class="fourText  whiteText text-center">Set up and run a campaign<br /> in minutes</p>
             </div>
             <div class="buttonFour">
-                <button class="buttonBlue button2">Try It Out Now</button>
+                <button class="buttonBlue button2" data-toggle="modal" data-target="#exampleModal">Try It Out
+                    Now</button>
             </div>
 
         </div>
@@ -124,7 +156,11 @@
                     <p class="lastMsg">Together,<br /> let’s achieve more!</p>
                 </div>
                 <div class="buttonFour">
-                    <button class="button button2">Explore Whistle</button>
+                    <button class="button button2" data-toggle="modal" data-target="#exampleModal">Explore
+                        Whistle</button>
+
+
+
                 </div>
             </div>
             <div class="sixDiv">
@@ -140,6 +176,49 @@
 
 
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="mheader">
+                    <p class="mtitle">Acquire new<br /> customers the<br /> right way!</p>
+                </div>
+                <div class="modal-body">
+                    <div class="formSec">
+                        <form action="#">
+                            <div class="form-group">
+                                <input type="text" class="form-control form-control-sm" name="name"
+                                    placeholder="Enter Your Name">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control form-control-sm" name="mobile"
+                                    placeholder="Enter Your Mobile Number">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control form-control-sm" name="email"
+                                    placeholder="Enter Your Email-ID">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control form-control-sm" name="company"
+                                    placeholder="Enter Your Company Name">
+                            </div>
+
+                            <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+                            <div class="text-center pb-3">
+
+                                <button type="submit" class="buttonBlue button2 w-50 font-weight-bold">Submit</button>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
 
 
 
