--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <!-- <button type="submit" class="btn btn-default">Submit</button> -->
                     <div class="text-center">
 
-                        <button type="submit" class="buttonBlue button2 w-50 font-weight-bold">Submit</button>
+                        <button type="submit" class="buttonSubmit button2 w-50 font-weight-bold">Submit</button>
                     </div>
 
                 </form>
@@ -207,7 +207,7 @@
                             <!-- <button type="submit" class="btn btn-default">Submit</button> -->
                             <div class="text-center pb-3">
 
-                                <button type="submit" class="buttonBlue button2 w-50 font-weight-bold">Submit</button>
+                                <button type="submit" class="buttonSubmit button2 w-50 font-weight-bold">Submit</button>
                             </div>
 
                         </form>
