--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <p class="mtitle">Acquire new<br /> customers the<br /> right way!</p>
                 </div>
                 <div class="modal-body">
-                    <div class="formSec">
+                    <div class="formSec2">
                         <form action="#">
                             <div class="form-group">
                                 <input type="text" class="form-control form-control-sm" name="name"
