--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet"> -->
 </head>
 
-<body class="body1">
+<body>
     <div class="MainDiv">
         <div class="firstPart">
             <div class="odne">
@@ -43,12 +43,42 @@
                         <li>High<span class="markText"> conversion rate</span></li>
                     </ul>
                 </div>
-                <div class="buttonOne">
+                <!-- <div class="buttonOne">
                     <button class="button button1">Get Started</button>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="secondDivIn">
+        <div class="formDiv">
+            <p class="tounch">Let's Get In Touch</p>
+            <div class="formSec">
+                <form action="#">
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-sm" name="name"
+                            placeholder="Enter Your Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-sm" name="mobile"
+                            placeholder="Enter Your Mobile Number">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control form-control-sm" name="email"
+                            placeholder="Enter Your Email-ID">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-sm" name="company"
+                            placeholder="Enter Your Company Name">
+                    </div>
+
+                    <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+                    <div class="text-center">
+
+                        <button type="submit" class="buttonSubmit button2 w-50 font-weight-bold">Submit</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+        <div class="secondDiv">
             <div>
                 <p class="myOne2 whiteText">Run<br /> Interest -Based<br /> Targeted Campaigns</p>
             </div>
