--- a/index2.html
+++ b/index2.html
@@ -241,7 +241,8 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="mheader">
-                    <p class="mtitle">Acquire new<br /> customers the<br /> right way!</p>
+                    <p class="mtitle">Increase your sales with<br /> the new SMS marketing<br /> technology</p>
+
                 </div>
                 <div class="modal-body">
                     <div class="formSec2">
